--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
   <body>
     <div
-      class=" flex md:flex justify-center bg-gradient-to-r from-violet-500 to-fuchsia-500 text-white space-x-8 navbar  py-4 "
+      class=" flex md:flex justify-center bg-gradient-to-r from-violet-500 to-fuchsia-500 text-white space-x-8 navbar sm:text-base py-4 "
     >
-      <a href="" class="sm:text-base" >Home</a>
+      <a href="">Home</a>
       <a href="">About</a>
       <a href="">Events</a>
       <a href="">Co-Ordinators</a>
@@ -27,6 +27,7 @@
       </div>
     </div>
 
+  
 
     <div class="md:flex justify-center">
         <h3 class="animate-charcter">31st, 1st and 2th March</h3>
