--- a/index.html
+++ b/index.html
@@ -21,16 +21,23 @@
       <a href="">Co-Ordinators</a>
     </div>
 
-    <div class="contianer flex md:container md:max-auto ">
-      <div class="grid">
-
-      </div>
+  
+    <div class="flex sm:flex justify-center ">
+        <h3 class="animate-charcter">31st, 1st and 2th March</h3>
     </div>
 
-  
+    <div class="contianer flex md:container md:max-auto justify-center  ">
+      <div class="grid grid-cols-2 grid-rows-2 gap-3">
+      <img src="https://gajajyoti.cutm.ac.in/cult.jpg" class="w-64">
+      <img src="https://gajajyoti.cutm.ac.in/cult.jpg" class="w-64" >
 
-    <div class="md:flex justify-center">
-        <h3 class="animate-charcter">31st, 1st and 2th March</h3>
+      <img src="https://gajajyoti.cutm.ac.in/cult.jpg" class="w-64">
+      <img src="https://gajajyoti.cutm.ac.in/cult.jpg" class="w-64">
+
+      <img src="https://gajajyoti.cutm.ac.in/cult.jpg" class="w-64">
+      <img src="https://gajajyoti.cutm.ac.in/cult.jpg" class="w-64">
+
+      </div>
     </div>
   </body>
 </html>
