--- a/index.html
+++ b/index.html
@@ -1,43 +1,58 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
-    <link rel="stylesheet" href="./css/style.css" />
-    <title>Document</title>
-  </head>
 
-  <body>
-    <div
-      class=" flex md:flex justify-center bg-gradient-to-r from-violet-500 to-fuchsia-500 text-white space-x-8 navbar sm:text-base py-4 "
-    >
-      <a href="">Home</a>
-      <a href="">About</a>
-      <a href="">Events</a>
-      <a href="">Co-Ordinators</a>
-    </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+  <link rel="stylesheet" href="./css/style.css" />
+  <title>Document</title>
+</head>
 
+<body>
+  <div>
+    <div class="flex md:flex justify-center bg-black text-white space-x-8 navbar py-4 sticky top-0">
   
-    <div class="flex sm:flex justify-center ">
-        <h3 class="animate-charcter">31st, 1st and 2th March</h3>
+      <a href="" class="text-sm md:text-base">Home</a>
+      <a href="" class="text-sm md:text-base">About</a>
+
+      <a href="" class="text-sm md:text-base">Events</a>
+      <a href="" class="text-sm md:text-base">Co-Ordinators</a>
     </div>
+  </div>
 
-    <div class="contianer flex md:container md:max-auto justify-center  ">
-      <div class="grid grid-cols-2 grid-rows-2 gap-3">
-      <img src="https://gajajyoti.cutm.ac.in/cult.jpg" class="w-64">
-      <img src="https://gajajyoti.cutm.ac.in/cult.jpg" class="w-64" >
+  <div class="flex justify:flex justify-center m-4">
+    <img
+      src="https://images.unsplash.com/photo-1647440076173-d7e80d86c115?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80"
+      alt="" />
+  </div>
 
-      <img src="https://gajajyoti.cutm.ac.in/cult.jpg" class="w-64">
-      <img src="https://gajajyoti.cutm.ac.in/cult.jpg" class="w-64">
+  <div class="flex sm:flex justify-center bg-white mt-8 py-10 bg-gradient-to-r from-sky-500 to-indigo-500">
+    <h3 class="animate-charcter">31st, 1st and 2th March</h3>
+  </div>
 
-      <img src="https://gajajyoti.cutm.ac.in/cult.jpg" class="w-64">
-      <img src="https://gajajyoti.cutm.ac.in/cult.jpg" class="w-64">
-
-      </div>
+  <div class="container about">
+    <div class="flex md:flex justify-center">
+      <img src="https://gajajyoti.cutm.ac.in/cutm.png" class="w-80" />
     </div>
-  </body>
+    <div class="flex-col mt-10 text-center">
+      <h3 class="text-2xl">About</h3>
+      <p>
+        The journey of Centurion University of Technology and Management
+        (CUTM) began in the year 2005 by a group of ambitious academics with
+        aspirations to provide high quality education both nationally and
+        internationally. The first step in this direction was to take over an
+        ailing engineering Institute, the Jagannath Institute for Technology
+        and Management (JITM) in one of the most challenging tribal districts
+        of Odisha and one which was considered to be a left-wing extremist
+        affected area. Subsequently, JITM was transformed into Centurion
+        University of Technology and Management in August 2010, through an act
+        of Odisha Legislative Assembly.
+      </p>
+    </div>
+  </div>
+</body>
+
 </html>
