--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
 
   <div class="flex justify-center ">
-    <img src="/logo.png" alt="">
+    <img src="./images/logo.png" alt="">
   </div>
   <div class="flex justify-center ">
-    <img src="/logo2.png" alt="">
+    <img src="./images/logo2.png" alt="">
   </div>
   
   
