--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
 
-  <script src=" https://cdn.jsdelivr.net/npm/@splidejs/splide@3.6.12/dist/js/splide.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="./css/style.css" />
   <title>Gajajyoti2k22</title>
 </head>
@@ -61,11 +61,44 @@
     </div>
 
 
+
+
+
+    <!-- About Cutm -->
+
+    <div class="flex flex-col items-center mt-5 max-w-full bg-white border-2 border-solid border-black ">
+
+      <img src="./images/cutm-logo.png" class="w-60 mt-5" alt="">
+      <h3 class="hero-txt mt-5 text-4xl">About</h3>
+      <p class=" p-4 max-w-7xl text-lg  mt-4">The journey of Centurion University of Technology and Management (CUTM)
+        began in the year 2005 by a group of ambitious academics with aspirations to provide high quality education both
+        nationally and internationally. The first step in this direction was to take over an ailing engineering
+        Institute, the Jagannath Institute for Technology and Management (JITM) in one of the most challenging tribal
+        districts of Odisha and one which was considered to be a left-wing extremist affected area. Subsequently, JITM
+        was transformed into Centurion University of Technology and Management in August 2010, through an act of Odisha
+        Legislative Assembly.</p>
+
+
+      <img src="./images/gramtarang.jpg" class="w-60 mt-16" alt="">
+      <h3 class="hero-txt mt-5 text-4xl">About</h3>
+      <p class=" p-4  max-w-7xl text-lg  mt-4">Gram Tarang Employability Training Services Pvt. Ltd. is a social
+        entrepreneurial initiative in skill training working in largely underdeveloped regions of the country and is
+        committed & towards providing young people with high quality vocational education & skill training, relevant&
+        recognized certifications resulting in meaningful employment & successful careers in the organized sector.</p>
+
+    </div>
+
+    <!-- About Cutm  -->
+
+
+
+
+    
     <!-- Events -->
     <div class="flex flex-col items-center">
       <h2 class="hero-txt text-5xl mt-20 mb-5">Events</h2>
       <a href="./rules.html">
-        <p class="hero-txt text-3xl mt-2 mb-10 rule">Rules of Events</p>
+        <p class="hero-txt text-3xl text-black">Rules of Event</p>
       </a>
       <div
         class="grid  grid-cols-1 grid-rows-3 gap-4 sm:grid-cols-2 md:grid-cols-2 md:gap-8 m-4 max-w-sm md:max-w-3xl ">
@@ -76,24 +109,23 @@
         <img src="./images/entrepreneurship .png" class="border-solid border-4 border-black" alt="">
         <img src="./images/libraryevent.png" class="border-solid border-4 border-black " alt="">
       </div>
-     
+
     </div>
-     <!-- Events -->
+    <!-- Events -->
 
-
-
-    <footer class=" flex flex-col  md:shrink-0 items-center p-5 max-w-full bg-black text-white mb-0">
-      <p class="mb-4">CONNECT WITH US</p>
+    <footer class=" flex flex-col  md:shrink-0 items-center p-2 max-w-full bg-black  text-white mb-0">
+      <p class="mb-2 text-xs">CONNECT WITH US</p>
       <a href="https://www.facebook.com/Gajajyoti-2020-101487234760137/" target="_blank"><img
-          src="https://img.icons8.com/fluency/48/000000/facebook-new.png" class="h-10 w-10 mb-4" /></a>
-      <div class="flex">
+          src="https://img.icons8.com/fluency/48/000000/facebook-new.png" class="h-10 w-10 mb-2" /></a>
+      <div class="flex text-xs">
         <p>2022 Copyright &copy; <a href="">Centurion University of Technology and Management</a> | All rights reserved.
         </p>
       </div>
     </footer>
     <script src="./js/script.js"></script>
-    <script src="jquery.min.js"></script>
-    <script src="owlcarousel/owl.carousel.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
