--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
     <!-- Slider -->
     <div class="flex flex-col items-center p-2">
-      <h2 class="hero-txt mt-40 md:mt-10 text-sm md:text-2xl ">SOME MEMORABLE MOMENTS OF GAJAJYOTI2K19</h2>
+      <h2 class="hero-txt mt-10 md:mt-10 sm:mt-5 text-xs md:text-2xl ">SOME MEMORABLE MOMENTS OF GAJAJYOTI2K19</h2>
     
     <div class="carousel-container ">
      
@@ -161,7 +161,7 @@
       </div>
     </div>
 
-    <div class=" bg-gradient-to-r from-sky-500 to-indigo-500 text-xs md:text-xl text-white p-2  md:p-4 mb-8  font-bold	rounded-full">
+    <div class=" bg-gradient-to-r from-sky-500 to-indigo-500 text-xs md:text-xl text-white p-2  md:p-4 mb-8  font-thin md:font-bold rounded-full">
       <a href=""><p>CLICK HERE TO REACH THE GALLERY OF GAJAJYOTI OF 2K19</p></a> 
     </div>
   </div>
