--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
     <!-- Events -->
 
     <!-- Slider -->
-    <div class="flex flex-col items-center ">
+    <div class="flex flex-col items-center p-4 ">
       <h2 class="hero-txt mt-8  md:mt-10 sm:mt-5 text-xs md:text-2xl ">SOME MEMORABLE MOMENTS OF GAJAJYOTI2K19</h2>
     
-    <div class="carousel-container ">
+    <div class="carousel-container">
      
       <div class="mySlides animate">
         <img src="./images/fest/1.jpg" alt="slide" />
