--- a/index.html
+++ b/index.html
@@ -52,9 +52,38 @@
       <img src="./images/logo2.png" class="max-w-full h-auto" alt="" />
     </div>
 
+
+
     <div class=" banner flex justify-center text-2xl md:text-4xl font-extrabold bg-white p-4 ">
       <h3 class="animate-charcter">31st March,1st April and 2nd April</h3>
     </div>
+
+
+   <section class="coming-soon">
+     <div>
+       <h2 class="text-4xl font-bold p-3">Days Left for Event</h2>
+       <div class="countdown">
+         <div class="container-day">
+           <h3 class="day">Time</h3>
+           <h3>Day</h3>
+         </div>
+         <div class="container-hour">
+          <h3 class="hour">Time</h3>
+          <h3>Hour</h3>
+        </div>
+        <div class="container-minute">
+          <h3 class="minute">Time</h3>
+          <h3>Minute</h3>
+        </div>
+        <div class="container-second">
+          <h3 class="second">Time</h3>
+          <h3>Second</h3>
+        </div>
+       </div>
+     </div>
+   </section>
+
+
 
 
 
@@ -67,31 +96,7 @@
 
 
 
-    <!-- About Cutm -->
 
-    <div class="flex flex-col items-center mt-5 max-w-full bg-white border-2 border-solid border-black ">
-
-      <img src="./images/cutm-logo.png" class="w-60 mt-5" alt="">
-      <h3 class="hero-txt mt-5 text-4xl">About</h3>
-      <p class=" p-4 max-w-7xl text-lg  mt-4">The journey of Centurion University of Technology and Management (CUTM)
-        began in the year 2005 by a group of ambitious academics with aspirations to provide high quality education both
-        nationally and internationally. The first step in this direction was to take over an ailing engineering
-        Institute, the Jagannath Institute for Technology and Management (JITM) in one of the most challenging tribal
-        districts of Odisha and one which was considered to be a left-wing extremist affected area. Subsequently, JITM
-        was transformed into Centurion University of Technology and Management in August 2010, through an act of Odisha
-        Legislative Assembly.</p>
-
-
-      <img src="./images/gramtarang.jpg" class="w-60 mt-16" alt="">
-      <h3 class="hero-txt mt-5 text-4xl">About</h3>
-      <p class=" p-4  max-w-7xl text-lg  mt-4">Gram Tarang Employability Training Services Pvt. Ltd. is a social
-        entrepreneurial initiative in skill training working in largely underdeveloped regions of the country and is
-        committed & towards providing young people with high quality vocational education & skill training, relevant&
-        recognized certifications resulting in meaningful employment & successful careers in the organized sector.</p>
-
-    </div>
-
-    <!-- About Cutm  -->
 
 
 
@@ -99,9 +104,9 @@
 
     <!-- Events -->
     <div class="flex flex-col items-center">
-      <h2 class="hero-txt text-5xl mt-20 mb-5">Events</h2>
+      <h2 class="hero-txt text-5xl text-white mt-20 mb-5">Events</h2>  
       <a href="./rules.html">
-        <p class="hero-txt text-3xl text-black hover:underline ">Rules of Event</p>
+        <p class="hero-txt text-3xl text-white hover:underline ">Rules of Event</p>
       </a>
       <div
         class="grid  grid-cols-1 grid-rows-3 gap-4 sm:grid-cols-2 md:grid-cols-2 md:gap-8 m-4 max-w-sm md:max-w-3xl ">
@@ -114,69 +119,73 @@
       </div>
 
     </div>
-    <!-- Events -->
+    <!-- Events End -->
+
+
+
 
     <!-- Slider -->
     <div class="flex flex-col items-center p-4 ">
-      <h2 class="hero-txt mt-8  md:mt-10 sm:mt-5 text-xs md:text-2xl ">SOME MEMORABLE MOMENTS OF GAJAJYOTI2K19</h2>
-    
-    <div class="carousel-container">
-     
-      <div class="mySlides animate">
-        <img src="./images/fest/1.jpg" alt="slide" />
+      <h2 class="hero-txt mt-8 text-white  md:mt-10 sm:mt-5 text-xs md:text-2xl ">SOME MEMORABLE MOMENTS OF GAJAJYOTI2K19</h2>
 
+      <div class="carousel-container">
+
+        <div class="mySlides animate">
+          <img src="./images/fest/1.jpg" alt="slide" />
+
+        </div>
+
+        <div class="mySlides animate">
+          <img src="./images/fest/2.JPG" alt="slide" />
+
+        </div>
+
+        <div class="mySlides animate">
+          <img src="./images/fest/3.JPG" alt="slide" />
+
+        </div>
+
+        <div class="mySlides animate">
+          <img src="./images/fest/4.JPG" alt="slide" />
+
+        </div>
+
+        <div class="mySlides animate">
+          <img src="./images/fest/5.JPG" alt="slide" />
+
+        </div>
+
+
+
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="prevSlide()">&#10094;</a>
+        <a class="next" onclick="nextSlide()">&#10095;</a>
+
+        <!-- The dots/circles -->
+        <div class="dots-container">
+          <span class="dots" onclick="currentSlide(1)"></span>
+          <span class="dots" onclick="currentSlide(2)"></span>
+          <span class="dots" onclick="currentSlide(3)"></span>
+          <span class="dots" onclick="currentSlide(4)"></span>
+          <span class="dots" onclick="currentSlide(5)"></span>
+        </div>
       </div>
 
-      <div class="mySlides animate">
-        <img src="./images/fest/2.JPG" alt="slide" />
-
-      </div>
-
-      <div class="mySlides animate">
-        <img src="./images/fest/3.JPG" alt="slide" />
-
-      </div>
-
-      <div class="mySlides animate">
-        <img src="./images/fest/4.JPG" alt="slide" />
-
-      </div>
-
-      <div class="mySlides animate">
-        <img src="./images/fest/5.JPG" alt="slide" />
-
-      </div>
-
-      <!-- Next and previous buttons -->
-      <a class="prev" onclick="prevSlide()">&#10094;</a>
-      <a class="next" onclick="nextSlide()">&#10095;</a>
-
-      <!-- The dots/circles -->
-      <div class="dots-container">
-        <span class="dots" onclick="currentSlide(1)"></span>
-        <span class="dots" onclick="currentSlide(2)"></span>
-        <span class="dots" onclick="currentSlide(3)"></span>
-        <span class="dots" onclick="currentSlide(4)"></span>
-        <span class="dots" onclick="currentSlide(5)"></span>
+      <div
+        class=" bg-gradient-to-r  from-sky-500 to-indigo-500 text-xs md:text-xl text-white p-2 md:p-4 mb-8  font-bold text-center md:font-bold rounded-full">
+        <a href="">
+          <p>CLICK HERE TO REACH THE GALLERY OF GAJAJYOTI OF 2K22</p>
+        </a>
       </div>
     </div>
-
-    <div class=" bg-gradient-to-r  from-sky-500 to-indigo-500 text-xs md:text-xl text-white p-2 md:p-4 mb-8  font-bold text-center md:font-bold rounded-full">
-      <a href=""><p>CLICK HERE TO REACH THE GALLERY OF GAJAJYOTI OF 2K19</p></a> 
-    </div>
-  </div>
+    <!-- Slider End -->
 
 
 
 
 
 
-
-
-
-
-
-
+    <!-- Footer -->
 
     <footer class=" flex flex-col  md:shrink-0 items-center p-2 max-w-full bg-black   text-white mb-0">
       <p class="mb-2 text-xs">CONNECT WITH US</p>
@@ -188,6 +197,8 @@
         </p>
       </div>
     </footer>
+
+    <!-- Footer End -->
     <script src="./js/script.js"></script>
     <script src="./js/slider.js"></script>
 
