--- a/index.html
+++ b/index.html
@@ -54,30 +54,28 @@
 
 
 
-    <div class=" banner flex justify-center text-2xl md:text-4xl font-extrabold bg-white p-4 ">
-      <h3 class="animate-charcter">31st March,1st April and 2nd April</h3>
-    </div>
+  
 
 
-   <section class="coming-soon">
-     <div>
-       <h2 class="text-4xl font-bold p-3">Days Left for Event</h2>
-       <div class="countdown">
-         <div class="container-day">
-           <h3 class="day">Time</h3>
-           <h3>Day</h3>
+   <section class="coming-soon bg-white ">
+     <div class="animate-charcter text-sm">
+       <h2 class="font-bold mb-4 ml-10 md:ml-0 md:text-4xl">Days Left for Event</h2>
+       <div class="countdown ">
+         <div class="container-day p-2 ">
+           <h3 class="day font-bold  text-sm md:text-2xl">Time</h3>
+           <h3  class="font-bold text-sm md:text-2xl">Day</h3>
          </div>
-         <div class="container-hour">
-          <h3 class="hour">Time</h3>
-          <h3>Hour</h3>
+         <div class="container-hour p-2">
+          <h3 class="hour font-bold text-sm md:text-2xl ">Time</h3>
+          <h3  class="font-bold text-sm md:text-2xl">Hour</h3>
         </div>
-        <div class="container-minute">
-          <h3 class="minute">Time</h3>
-          <h3>Minute</h3>
+        <div class="container-minute p-2">
+          <h3 class="minute font-bold text-sm md:text-2xl">Time</h3>
+          <h3  class="font-bold text-sm md:text-2xl">Minute</h3>
         </div>
-        <div class="container-second">
-          <h3 class="second">Time</h3>
-          <h3>Second</h3>
+        <div class="container-second p-2">
+          <h3 class="second font-bold text-sm md:text-2xl" >Time</h3>
+          <h3  class="font-bold text-sm md:text-2xl">Second</h3>
         </div>
        </div>
      </div>
