--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 </head>
 
 <body>
-  <div>
+
 
     <!-- Navbar -->
     <header class="header">
       <nav class="navbar">
         <ul class="nav-menu">
           <li class="nav-item">
-            <a href="#" class="nav-link">Home</a>
+            <a href="./index.html" class="nav-link">Home</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">About</a>
+            <a href="./about.html" class="nav-link">About</a>
           </li>
           <li class="nav-item">
             <a href="#" class="nav-link">Events</a>
@@ -188,7 +188,7 @@
     <footer class=" flex flex-col  md:shrink-0 items-center p-2 max-w-full bg-black   text-white mb-0">
       <p class="mb-2 text-xs">CONNECT WITH US</p>
       <a href="https://www.facebook.com/Gajajyoti-2020-101487234760137/" target="_blank"><img
-          src="https://img.icons8.com/fluency/48/000000/facebook-new.png" class="h-10 w-10 mb-2" /></a>
+        src="https://img.icons8.com/color/48/000000/instagram-new--v1.png" class="h-10 w-10 mb-2" /></a>
       <div class="flex text-xs ">
         <p>2022 Copyright &copy; <a href="cutm.ac.in">Centurion University of Technology and Management</a> | All rights
           reserved.
@@ -198,6 +198,7 @@
 
     <!-- Footer End -->
     <script src="./js/script.js"></script>
+    <script src="./js/timer.js"></script>
     <script src="./js/slider.js"></script>
 
 
