--- a/about.html
+++ b/about.html
@@ -84,8 +84,8 @@
 
   <footer class=" flex flex-col  md:shrink-0 items-center p-2 max-w-full bg-black   text-white mb-0">
     <p class="mb-2 text-xs">CONNECT WITH US</p>
-    <a href="https://www.facebook.com/Gajajyoti-2020-101487234760137/" target="_blank"><img
-        src="https://img.icons8.com/fluency/48/000000/facebook-new.png" class="h-10 w-10 mb-2" /></a>
+    <a href="https://www.instagram.com/gajajyoti_2022/?utm_medium=copy_link/" target="_blank"><img
+        src="https://img.icons8.com/color/48/000000/instagram-new--v1.png" class="h-10 w-10 mb-2" /></a>
     <div class="flex text-xs ">
       <p>2022 Copyright &copy; <a href="cutm.ac.in">Centurion University of Technology and Management</a> | All rights
         reserved.
