--- a/rules.html
+++ b/rules.html
@@ -7,23 +7,142 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+
+
   <link rel="stylesheet" href="./css/style.css" />
-  <title>Document</title>
+  <link rel="stylesheet" href="./css/slider.css">
+  <title>Gajajyoti2k22</title>
 </head>
 
 <body>
-  <div>
-    <div class="flex md:shrink-0 justify-center bg-black text-white space-x-8 navbar py-4 fixed top-0 left-0 right-0  ">
-      <a href="./index.html" class="text-sm md:text-base">Home</a>
-      <a href="./about.html" class="text-sm md:text-base">About</a>
-      <a href="./event.html" class="text-sm md:text-base">Events</a>
-      <a href="" class="text-sm md:text-base">Co-Ordinators</a>
-    </div>
+
+
+  <!-- Navbar -->
+  <header class="header">
+    <nav class="navbar">
+      <ul class="nav-menu">
+        <li class="nav-item">
+          <a href="./index.html" class="nav-link">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="./about.html" class="nav-link">About</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Events</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Co-Ordinators</a>
+        </li>
+      </ul>
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
+    </nav>
+  </header>
+  <!-- Navbar -->
+
+
+
+  <div class="flex flex-col items-center m-10">
+    <h3 class="font-bold md:text-3xl text-xl text-white">RULES OF THE EVENTS</h3>
+
+    <p class="text-white underline mt-8 tracking-wider"> INFORMALS</p>
+    <ol class="list-decimal text-white mt-8">
+      <li>Dart</li>
+      <li>Try your Luck</li>
+      <li>Cold drinks (5 bottles)</li>
+      <li>Table</li>
+      <li>Make the Pyramid</li>
+      <li>Break the Pyramid</li>
+      <li>Lemon spoon race</li>
+      <li>Plastic spoon</li>
+      <li>Lemon</li>
+      <li>Light the candle</li>
+      <li>Jump and eat</li>
+      <ul>
+        <li>-Chocolate</li>
+      </ul>
+      <li>Ring the bottle</li>
+      <ul>
+        <li>- Plastic botttle</li>
+      </ul>
+      <li>Blow the ballon</li>
+      <li>Burst the ballon</li>
+    </ol>
+
+    <p class="tracking-wider mt-8 text-white underline">LAUGHTER AND DRAMA</p>
+    <ol class="list-decimal text-white mt-8">
+      <li>The minimum size of each group is 3 and Maximum size is 7</li>
+      <li>Maximum time limit for each act is 15mins</li>
+      <li>No individual performer is allowed to participate in this event</li>
+    </ol>
+
+
+    <p class="tracking-wider mt-8 text-white underline">ONE ACT PLAY</p>
+    <ol class="list-decimal text-white mt-8">
+      <li>Maximum time limit for each act is 8 mins</li>
+      <li>No group performance is allowed to participate in this event</li>
+    </ol>
+
+
+
+    <p class="tracking-wider mt-8 text-white underline">MUSIC PLAY</p>
+    <ol class="list-decimal text-white mt-8">
+      <li>All the interested students must submit their names to the coordinators.</li>
+      <li>There will be two rounds held in the competition.</li>
+      <li>First round will be the KNOCKOUT round & second will be FINAL round.</li>
+      <li> Each participants will be given 2 min for the performance.</li>
+      <li>Participants need to practice their own song of any Language.</li>
+      <li>Students can sing with their own Karaoke(instrumental BGM).</li>
+    </ol>
+
+
+    <p class="tracking-wider mt-8 text-white underline">ROADIES RISING</p>
+    <ol class="list-decimal text-white mt-8">
+      <li>will be individual in roadies.</li>
+      <li>here will be a total of 5-6 rounds. In case of tie, more rounds will be conducted.</li>
+      <li>he details of the rounds will be given on the spot.</li>
+      <li>The participants must come physically and mentally prepared.</li>
+      <li>ll the tasks will be done near the lawn.</li>
+    </ol>
+
+
+    <p class="tracking-wider mt-8 text-white underline">MUSICAL CHAIR</p>
+    <ol class="list-decimal text-white mt-8">
+      <li>Walk around the chair when the music starts.</li>
+      <li>Find the chair to sit when music stops.</li>
+      <li>Leave the game if you are left without a chair</li>
+      <li>Remove one chair and play again.</li>
+      <li>Continue playing rounds until there is one person left.</li>
+      <li>Don’t touch the chairs while playing.</li>
+      <li>You need to register your name to participate in the game.</li>
+      <li>Do not argue with the respective coordinators once you loose</li>
+    </ol>
   </div>
 
 
 
 
-  </body>
-  </html>
-  
+  <!-- Footer -->
+
+  <footer class=" flex flex-col  md:shrink-0 items-center p-2 max-w-full bg-black   text-white mb-0">
+    <p class="mb-2 text-xs">CONNECT WITH US</p>
+    <a href="https://www.instagram.com/gajajyoti_2022/?utm_medium=copy_link" target="_blank"><img
+        src="https://img.icons8.com/color/48/000000/instagram-new--v1.png" class="h-10 w-10 mb-2" /></a>
+    <div class="flex text-xs ">
+      <p>2022 Copyright &copy; <a href="cutm.ac.in">Centurion University of Technology and Management</a> | All rights
+        reserved.
+      </p>
+    </div>
+  </footer>
+
+  <!-- Footer End -->
+  <script src="./js/script.js"></script>
+
+
+
+</body>
+
+</html>
