--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
           <a href="#" class="nav-link">Events</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">Co-Ordinators</a>
+          <a href="./Co-ordinator_page/Index.html" class="nav-link">Co-Ordinators</a>
         </li>
       </ul>
       <div class="hamburger">
