--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a href="#" class="nav-link">Events</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Co-Ordinators</a>
+            <a href="./Co-ordinator_page/Index.html" class="nav-link">Co-Ordinators</a>
           </li>
         </ul>
         <div class="hamburger">
@@ -124,7 +124,7 @@
 
     <!-- Slider -->
     <div class="flex flex-col items-center p-4 ">
-      <h2 class="hero-txt mt-8 text-white  md:mt-10 sm:mt-5 text-xs md:text-2xl ">SOME MEMORABLE MOMENTS OF GAJAJYOTI2K19</h2>
+      <h2 class="hero-txt mt-8 text-white  md:mt-10 sm:mt-5 text-xs md:text-2xl ">SOME MEMORABLE MOMENTS OF GAJAJYOTI</h2>
 
       <div class="carousel-container">
 
@@ -153,6 +153,25 @@
 
         </div>
 
+        <div class="mySlides animate">
+          <img src="./images/fest/6.JPG" alt="slide" />
+
+        </div>
+
+        <div class="mySlides animate">
+          <img src="./images/fest/7.JPG" alt="slide" />
+
+        </div>
+
+        <div class="mySlides animate">
+          <img src="./images/fest/8.JPG" alt="slide" />
+
+        </div>
+
+        <div class="mySlides animate">
+          <img src="./images/fest/9.JPG" alt="slide" />
+
+        </div>
 
 
         <!-- Next and previous buttons -->
@@ -171,8 +190,8 @@
 
       <div
         class=" bg-gradient-to-r  from-sky-500 to-indigo-500 text-xs md:text-xl text-white p-2 md:p-4 mb-8  font-bold text-center md:font-bold rounded-full">
-        <a href="">
-          <p>CLICK HERE TO REACH THE GALLERY OF GAJAJYOTI OF 2K22</p>
+        <a href="./gallery.html">
+          <p>CLICK HERE TO REACH THE GALLERY OF GAJAJYOTI OF 2K20</p>
         </a>
       </div>
     </div>
