--- a/rules.html
+++ b/rules.html
@@ -120,6 +120,208 @@
       <li>You need to register your name to participate in the game.</li>
       <li>Do not argue with the respective coordinators once you loose</li>
     </ol>
+
+
+    <p class="tracking-wider mt-8 text-white underline">SOLO AND GROUP DANCE</p>
+    <ol class="list-decimal text-white mt-8">
+      <li> No revealing costumes.</li>
+      <li> Song duration must be within 4 minutes.</li>
+      <li> No profanity is to be heard.</li>
+      <li> Every group must consist of more than 2 members. No substitution permitted.</li>
+      <li> Use of drugs, cigarettes and alcoholic beverage are strictly prohibited.
+      <li> Please prepare your own CD, groups must register at the location 25 minutes before the competition start.
+      </li>
+      <li> Every particip ant must be college/university student.</li>
+      <li> Deadline for registration: 1st march 2019</li>
+      <li> The dance style should include any form of street dance.</li>
+      <li> No explicit gestures, comments and movements.</li>
+      <li> Marks will be given on creativity, music, stage presence, teamwork, dance variation, synchronization,
+        entertainment value, crowd response and skills. The decisions of the judges are final.</li>
+      <li> Each entry form must be completed with a non-refundable cash entry fee of solo and for each of group members.
+      </li>
+      <li>All the participants should register for the competition.</li>
+      <li>Registration fee will be Rs.100/- per person.</li>
+      <li>Registration for the competition on 1st March will begins from 10am onwards.</li>
+      <li> Individual participants are allowed to take part in the competition.</li>
+      <li>Group participation are not allowed.</li>
+      <li>Basic materials will be provided to the registered participants.</li>
+      <li> Additional materials are allowed for the craft items & should be brought by the participants.</li>
+      <li>Registered participants should submit their craft items after completion.</li>
+      <li>They can also sell their items during the timespan of exhibition.</li>
+      <li>Top 3 students with the best craft items will be awarded.</li>
+      <li> Certificates for participation will be given to all the registered students.</li>
+    </ol>
+
+
+    <p class="tracking-wider mt-8 text-white underline">LANGUAGE AND CLUB EVENT</p>
+    <ol class="list-decimal text-white mt-8">
+      <li>The students must register their names before 5:00 Pm of 28th Feb, 2019.</li>
+      <li>The participants shall report at least 20 minutes prior the commencement of the competition.</li>
+      <li>The decision of judges will be final and binding to all the participants.</li>
+    </ol>
+
+
+
+    <p class="tracking-wider mt-8 text-white underline">AD-MAD SHOW</p>
+    <ol class="list-decimal text-white mt-8">
+      <li> In this event participants will have to produce advertisement for a product/ service in a proper way which is
+        quite appealing to audience.</li>
+      <li> Each group must have 3 members.</li>
+      <li> There will be 2 rounds :Round 1: Prelims Round; 2: Final round</li>
+      <li> Judging is done on the basis of team’s performance.</li>
+      <li> Participants should bring institute’s ID card along with them at the time of registration and must report at
+        the time given.</li>
+      <li> The ad prepared by the contestants must not contain any obscene words/any subject that hurts the feelings of
+        a
+        culture/language/religion/region.</li>
+      <li> Disobedience of rules may lead to disqualification.
+      <li> The decision of the judge is final and abiding.</li>
+      <li>Participants will be required to bring all necessary accessories by their own</li>
+    </ol>
+
+
+
+    <p class="tracking-wider mt-8 text-white underline">BUSINESS BINGO</p>
+    <ol class="list-decimal text-white mt-8">
+      <li>There can be only 2 members in each group. </li>
+      <li>The participants can make words VERTICALLY, HORIZONTALLY, STRAIGHT, DAIGONALLY</li>
+      <li>The participants who complete the grid within the given time will have to shout “BINGO”.</li>
+    </ol>
+
+
+    <p class="tracking-wider mt-8 text-white underline">BUSINESS PLAN</p>
+    <ol class="list-decimal text-white mt-8">
+      <li>Business plans may be submitted by individuals or by teams.</li>
+      <li>There must not be more than 3 in a team.</li>
+      <li>Executive summary, containing the expansion of business concept outlined must be sent through, E-mail on or
+        before event time and the selected plans will be intimated through e-mail.</li>
+      <li>The subject of the e-mail should be B-PLAN
+      <li>Teams should bring soft copy in pen-drive and Hard copy while attending competition.</li>
+      <li>The candidates should not participate in any other events.(at the time of b-plan event.)</li>
+      <li>A screening committee will review all the submissions and select the best finalists to present at the event.
+        The
+        screening committee decision shall be final. All submissions must clearly explain the business concept in terms
+        that do not expect the reader to be an expert in your industry or technology.</li>
+    </ol>
+
+
+    <p class="tracking-wider mt-8 text-white underline">EAGLE EYE</p>
+    <ol class="list-decimal text-white mt-8">
+      <li> Maximum 3 groups can participate in the event from a particular college with minimum 3 members in each group.
+      </li>
+      <li>The game consist of 3 rounds</li>
+      <li>First round will be conducted on individual basis for which each of the groups has to recommend one member
+        from
+        them and then second and third rounds will be on group basis.</li>
+      <li>During the event every group will be given different tasks like identifying the logos, taglines, key persons,
+        assembling jumbled words and to observe videos.</li>
+    </ol>
+
+
+    <p class="tracking-wider mt-8 text-white underline">MARKET KHETRA</p>
+    <ol class="list-decimal text-white mt-8">
+      <li> Student can form group of maximum2.</li>
+      <li> The entire game will be divided into 2 stages.</li>
+      <li> In the 1st stage they will choose a product or brand of their own (Non available in the market). They will
+        demonstrate different marketing principle to sale of product in front of panellist. This stage may be an
+        elimination round, depending upon the panellist.</li>
+      <li> In the 2nd stage, here the judges will give a product or brand. They will give 20 minutes to demonstrate
+        their
+        selling skill. They can use laptop or any other marketing materials having the process.</li>
+      <li> For each stage the maximum presentation is 5 minute and 5 minute for question answer session</li>
+    </ol>
+
+
+    <p class="tracking-wider mt-8 text-white underline">TOL MOL KE BOL</p>
+    <ol class="list-decimal text-white mt-8">
+      <li> There can be only two members in one group.</li>
+      <li> There will be a set of 30 managerial questions. In which the participants have to attend all the questions.
+      </li>
+      <li> 30 words-10 Minutes</li>
+      <li> Round 1: 50 % elimination</li>
+    </ol>
+
+
+
+
+    <p class="tracking-wider mt-8 text-white underline">SHARE YOUR FARE</p>
+    <ol class="list-decimal text-white mt-8">
+      <li> The stock name cannot contain offensive words in any language. Such users will be deleted without any notice.
+      </li>
+      <li>The winners of the game will be awarded prizes.</li>
+      <li>Investment game will conduct for 30minutes on 1st of March 2017.</li>
+      <li>Only the best performing portfolio will be awarded.</li>
+    </ol>
+
+
+    <p class="tracking-wider mt-8 text-white underline">TREASURE HUNT</p>
+    <ol class="list-decimal text-white mt-8">
+      <li> Assign each player/team a color. Put each clue in a color-coded envelope in each hiding space. That way, the
+        teams won't read each other's clues or take each other's treasure.</li>
+      <li> The "treasure" should fit in your envelopes. It can be a certificate, some stickers, a picture, or a small
+        prize.</li>
+      <li> It works better if there are more locations than there are teams.
+      <li> Make sure you don't hide a clue in the place it points to! You might want to play through each team's hunt
+        just
+        to make sure that everything is working right.</li>
+      <li> A house works great for small children, but big kids will need more space. Try the back yard, the school, or
+        the whole neighborhood!</li>
+      <li> Your clue should have two parts: general and specific. One part of the clue should direct players to the
+        general spot (room, yard, tree), and the other part of the clue should give the details of where to look for the
+        envelope (in the jar, under the big rock, on Julia's desk)</li>
+    </ol>
+
+
+    <p class="tracking-wider mt-8 text-white underline">PAPRE</p>
+    <ol class="list-decimal text-white mt-8">
+      <li> No group participation
+      <li> Participants have to report at the venue at least 2 hours before on the scheduled time.</li>
+      <li> Paper must contain participant’s details along with the faculty guide’s name ,department and college .(Better
+        to keep these details in extra margin).</li>
+      <li> Paper should be neat and clean</li>
+      <li> Both paper (drawing sheet ) and flex printing allowed.</li>
+      <li> Ties, if any, will be resolved on the basis of understanding of the basic idea/concept/experiment represented
+        on the poster.</li>
+    </ol>
+
+
+
+    <p class="tracking-wider mt-8 text-white underline">QUIZ</p>
+    <ol class="list-decimal text-white mt-8">
+      <li> Group size minimum 2 and maximum 3. No single participant is allowed.</li>
+      <li> There will be different rounds consisting of with/without option, with/without pass, with /without negative
+        and
+        visual type questions.</li>
+      <li> The participants for right answer will get 10 marks and for passes whoever answer they will get 5 marks and
+        for
+        wrong answer there will be a negative marking depending on which round you are. Finally for no answer
+        participant
+        will get zero mark.</li>
+      <li> No mobile phones are allowed during the competition.</li>
+      <li> In case of disputes, decision of experts (teachers +researchers team) will be considered as final.</li>
+      <li> Once competition starts no one is allowed to the competition spot whether registered or note.</li>
+      <li> Ties, if any, will be resolved by rapid fire round.</li>
+    </ol>
+
+
+    <p class="tracking-wider mt-8 text-white underline">PLAY WITH PHARMA</p>
+    <P class=" mt-8 text-white ">The person qualifying 1st level will be promoted to next level</P>
+    <p class="mt-8 text-white font-semibold">Rules For Level-1 (Quiz)</p>
+    <ol class="list-decimal text-white mt-8">
+      <li> Compidition of PharmaQuiz Having 15 questions</li>
+      <li> Each question carries 3 mark.</li>
+      <li>Participants Should Finish the Quiz within 20 min</li>
+    </ol>
+    <p class="mt-8 text-white font-semibold">Rules For Level-2 (Puzzle)</p>
+    <ol class="list-decimal text-white mt-8">
+      <li> In level-2 participants should arrange the alphabates that will indicate a drug name.</li>
+      <li> Time limit for level-2 is 3 min.</li>
+    </ol>
+    <p class="mt-8 text-white font-semibold">Rules For Level-3 (Find the Name)</p>
+    <ol class="list-decimal text-white mt-8">
+      <li> Guess the appropiate use of the above drug by matching it with the given emoji</li>
+      <li> There are 5 emoji each contains 2 min</li>
+    </ol>
   </div>
 
 
