--- a/index.html
+++ b/index.html
@@ -208,9 +208,8 @@
       <p class="mb-2 text-xs">CONNECT WITH US</p>
       <a href="https://www.instagram.com/gajajyoti_2022/?utm_medium=copy_link" target="_blank"><img
         src="https://img.icons8.com/color/48/000000/instagram-new--v1.png" class="h-10 w-10 mb-2" /></a>
-      <div class="flex text-xs ">
-        <p>2022 Copyright &copy; <a href="cutm.ac.in">Centurion University of Technology and Management</a> | All rights
-          reserved.
+      <div class="flex text-xs justify-center">
+        <p> Copyright ©2022 Centurion University of Technology and Management | All rights reserved
         </p>
       </div>
     </footer>
