--- a/Co-ordinator_page/Index.html
+++ b/Co-ordinator_page/Index.html
@@ -29,9 +29,7 @@
 
     <nav class="nav">
         <div class="nav-menu flex-row">
-            <div class="nav-brand">
-                <a href="#" class="text-gray">CO-ORDINATORS</a>
-            </div>
+           
             <div class="toggle-collapse">
                 <div class="toggle-icons">
                     <i class="fas fa-bars"></i>
@@ -40,28 +38,19 @@
             <div>
                 <ul class="nav-items">
                     <li class="nav-link">
-                        <a href="#">Home</a>
+                        <a href="../index.html">Home</a>
                     </li>
                     <li class="nav-link">
-                        <a href="#">Category</a>
+                        <a href="../about.html">About</a>
                     </li>
+
                     <li class="nav-link">
-                        <a href="#">Archive</a>
+                        <a href="./commitee/Co-ordinator.html">Co-ordinator</a>
                     </li>
-                    <li class="nav-link">
-                        <a href="#">Pages</a>
-                    </li>
-                    <li class="nav-link">
-                        <a href="#">Contact Us</a>
-                    </li>
+
                 </ul>
             </div>
-            <div class="social text-gray">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
-            </div>
+
         </div>
     </nav>
 
@@ -133,7 +122,8 @@
                             <img src="./assets/Event-post/image/wall.png" alt="post-1">
                             <div class="blog-title">
                                 <h3>Wall Magazine</h3>
-                                <a href="./commitee/Wall_magazine.html"><button class="btn btn-blog">Explore</button></a>
+                                <a href="./commitee/Wall_magazine.html"><button
+                                        class="btn btn-blog">Explore</button></a>
                                 <span>2 minutes</span>
                             </div>
                         </div>
@@ -188,37 +178,18 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="about-us" data-aos="fade-right" data-aos-delay="200">
-                <h2>About us</h2>
-                <button onclick="window.location.href='https://cutm.ac.in/'">Click here</button>
-            </div>
-            <div class="instagram" data-aos="fade-left" data-aos-delay="200">
-                <h2>Events</h2>
-                <div class="flex-row">
-                    <img src="./assets/instagram/1.png" alt="insta1">
-                    <img src="./assets/instagram/2.png" alt="insta2">
-                    <img src="./assets/instagram/3.png" alt="insta3">
-                </div>
-                <div class="flex-row">
-                    <img src="./assets/instagram/4.png" alt="insta4">
-                    <img src="./assets/instagram/5.JPG" alt="insta5">
-                    <img src="./assets/instagram/6.png" alt="insta6">
-                </div>
-            </div>
+
             <div class="follow" data-aos="fade-left" data-aos-delay="200">
-                <h2>Follow us</h2>
-                <p>Let us be Social</p>
+                <h2>CONNECT WITH US</h2>
                 <div>
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-youtube"></i></a>
+                    <a href="https://www.instagram.com/gajajyoti_2022/?utm_medium=copy_link"><i
+                            class="fab fa-instagram"></i></a>
                 </div>
             </div>
         </div>
         <div class="rights flex-row">
             <h4 class="text-gray">
-                Copyright ©2022 All rights reserved | made by Anand Singh
+                Copyright ©2022 Centurion University of Technology and Management | All rights reserved
             </h4>
         </div>
         <div class="move-up">
