--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
   <link rel="stylesheet" href="./css/style.css" />
-  <title>About</title>
+  <title>Contact</title>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
           <a href="#" class="nav-link">Events</a>
         </li>
         <li class="nav-item">
-          <a href="#" class="nav-link">Co-Ordinators</a>
+          <a href="./Co-ordinator_page/Index.html" class="nav-link">Co-Ordinators</a>
         </li>
       </ul>
       <div class="hamburger">
@@ -42,52 +42,19 @@
 
   <div class="flex flex-col items-center md:m-8 max-w-full  text-white ">
     <img src="./images/cutm-logo.png" class="w-80 mt-5" alt="">
-    <h3 class="hero-txt mt-5 text-4xl">Contact</h3>
-    <!-- <p class=" p-4 max-w-7xl text-lg  mt-4">The journey of Centurion University of Technology and Management (CUTM)
-      began in the year 2005 by a group of ambitious academics with aspirations to provide high quality education both
-      nationally and internationally. The first step in this direction was to take over an ailing engineering
-      Institute, the Jagannath Institute for Technology and Management (JITM) in one of the most challenging tribal
-      districts of Odisha and one which was considered to be a left-wing extremist affected area. Subsequently, JITM
-      was transformed into Centurion University of Technology and Management in August 2010, through an act of Odisha
-      Legislative Assembly.</p> -->
-      <div>
-          <img src="./images/coordinators_poster.jpg" alt="">
-      </div>
-
-    <h2 class="hero-txt mt-5 text-4xl">Our Vision</h2>
-    
-    <p class="p-4 max-w-7xl text-lg mt-4">
-      Provision of quality ,globally accredited academic programmes in technology and management . Facilitating improved
-      market access to goods and financial services to the target population. Promotion of lighthouse project
-      interventions in the target area.
+    <h3 class="hero-txt mt-5 text-4xl">Contact us</h3>
+    <p class=" p-4 max-w-7xl text-lg  mt-4">
+        <img src="./images/coordinators_poster.jpg" width="550" height="650" alt="">
     </p>
-
-
-    <h2 class="hero-txt mt-5 text-4xl">Our Mission</h2>
-
-    <p class="p-4 max-w-7xl text-lg mt-4">
-      A globally accredited of human resources center of excellence catalyzing
-"sustanable livelihood "in the "less developed markets across the globe".
-    </p>
-
-
-    <img src="./images/gramtarang.png" class="w-60 mt-16" alt="">
-    <h3 class="hero-txt mt-5 text-4xl">About</h3>
-    <p class=" p-4  max-w-7xl text-lg  mt-4">Gram Tarang Employability Training Services Pvt. Ltd. is a social
-      entrepreneurial initiative in skill training working in largely underdeveloped regions of the country and is
-      committed & towards providing young people with high quality vocational education & skill training, relevant&
-      recognized certifications resulting in meaningful employment & successful careers in the organized sector.</p>
-  </div>
-
-
+    </div>
 
 
   <!-- Footer -->
 
-  <footer class=" flex flex-col  md:shrink-0 items-center p-2 max-w-full bg-black   text-white mb-0">
+  <footer class=" flex flex-col  md:shrink-0 items-center p-2 max-w-full bg-black h-50 text-white mb-0">
     <p class="mb-2 text-xs">CONNECT WITH US</p>
     <a href="https://www.instagram.com/gajajyoti_2022/?utm_medium=copy_link/" target="_blank"><img
-        src="https://img.icons8.com/color/48/000000/instagram-new--v1.png" class="h-10 w-10 mb-2" /></a>
+        src="https://img.icons8.com/color/48/000000/instagram-new--v1.png " class="h-10 w-10 mb-2" /></a>
     <div class="flex text-xs ">
       <p>2022 Copyright &copy; <a href="cutm.ac.in">Centurion University of Technology and Management</a> | All rights
         reserved.
