--- a/Co-ordinator_page/commitee/Designing.html
+++ b/Co-ordinator_page/commitee/Designing.html
@@ -34,40 +34,37 @@
         
         <div class="card">
             <div class="content">
-              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg"/></div>
+              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/gyan.jpg"/></div>
               <div class="contentBx">
                 <h3>Gyan Prakash Tiwari<br /><span>200301120028@cutm.ac.in</span></h3>
               </div>
             </div>
             <ul class="sci">
               <li style="--i:1">
-                <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                <a href="https://github.com/gyancodes"><i class="fa fa-github" aria-hidden="true"></i></a>
               </li>
               <li style="--i:2">
-                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-              </li>
-              <li style="--i:3">
-                <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                <a href="https://twitter.com/gyancodes"><i class="fa fa-twitter" aria-hidden="true"></i></a>
               </li>
             </ul>
           </div>
 
           <div class="card">
             <div class="content">
-              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg" /></div>
+              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/anand.jpeg" /></div>
               <div class="contentBx">
                 <h3>Anand Singh<br/><span>200301120031@cutm.ac.in</span></h3>
               </div>
             </div>
             <ul class="sci">
               <li style="--i:1">
-                <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                <a href="https://github.com/Anand-Singh-techie"><i class="fa fa-github" aria-hidden="true"></i></a>
               </li>
               <li style="--i:2">
-                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                <a href="https://twitter.com/AnandSi74095701"><i class="fa fa-twitter" aria-hidden="true"></i></a>
               </li>
               <li style="--i:3">
-                <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                <a href="https://www.instagram.com/mrextinct9999/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
               </li>
             </ul>
           </div>
@@ -83,11 +80,8 @@
               <li style="--i:1">
                 <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
               </li>
-              <li style="--i:2">
-                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-              </li>
               <li style="--i:3">
-                <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                <a href="https://www.instagram.com/im____shibam/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
               </li>
             </ul>
           </div>
@@ -116,7 +110,7 @@
             <div class="content">
               <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg" /></div>
               <div class="contentBx">
-                <h3>Sachitananda Panada<br/><span>2003011200__@cutm.ac.in</span></h3>
+                <h3>Sachitananda Panada<br/><span>200301130002@cutm.ac.in</span></h3>
               </div>
             </div>
             <ul class="sci">
