--- a/gallery.html
+++ b/gallery.html
@@ -31,8 +31,11 @@
                     <a href="#" class="nav-link">Events</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Co-Ordinators</a>
+                    <a href="./Co-ordinator_page/Index.html" class="nav-link">Co-Ordinators</a>
                 </li>
+                <li class="nav-item">
+                    <a href="./contact.html" class="nav-link">Contact Us</a>
+                  </li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
