--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
           <li class="nav-item">
             <a href="./Co-ordinator_page/Index.html" class="nav-link">Co-Ordinators</a>
           </li>
+          <li class="nav-item">
+            <a href="./contact.html" class="nav-link">Contact Us</a>
+          </li>
+
         </ul>
         <div class="hamburger">
           <span class="bar"></span>
