--- a/Co-ordinator_page/Index.html
+++ b/Co-ordinator_page/Index.html
@@ -48,6 +48,10 @@
                         <a href="./commitee/Co-ordinator.html">Co-ordinator</a>
                     </li>
 
+                    <li class="nav-link">
+                        <a href="../contact.html">Contact Us</a>
+                    </li>
+
                 </ul>
             </div>
 
