--- a/about.html
+++ b/about.html
@@ -28,6 +28,9 @@
         <li class="nav-item">
           <a href="./Co-ordinator_page/Index.html" class="nav-link">Co-Ordinators</a>
         </li>
+        <li class="nav-item">
+          <a href="./contact.html" class="nav-link">Contact Us</a>
+        </li>
       </ul>
       <div class="hamburger">
         <span class="bar"></span>
