--- a/Co-ordinator_page/commitee/Co-ordinator.html
+++ b/Co-ordinator_page/commitee/Co-ordinator.html
@@ -174,20 +174,20 @@
 
           <div class="card">
             <div class="content">
-              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg" /></div>
+              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/pritam.jpg" /></div>
               <div class="contentBx">
                 <h3>Pritam Kumar Nayak<br /><span>190301121115@cutm.ac.in</span></h3>
               </div>
             </div>
             <ul class="sci">
               <li style="--i:1">
-                <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                <a href="facebook.com/RockingPritamNayak.Sonu"><i class="fa fa-facebook" aria-hidden="true"></i></a>
               </li>
               <li style="--i:2">
-                <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                <a href="https://twitter.com/PritamKumarNay8"><i class="fa fa-twitter" aria-hidden="true"></i></a>
               </li>
               <li style="--i:3">
-                <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                <a href="https://www.instagram.com/accounts/login/?next=/pritamkumarnayak/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
               </li>
             </ul>
           </div>
