--- a/Co-ordinator_page/commitee/Designing.html
+++ b/Co-ordinator_page/commitee/Designing.html
@@ -71,7 +71,7 @@
 
           <div class="card">
             <div class="content">
-              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg" /></div>
+              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/shibam.jpeg" /></div>
               <div class="contentBx">
                 <h3>Shibam Acharya<br/><span>200301120022@cutm.ac.in</span></h3>
               </div>
