--- a/Co-ordinator_page/Index.html
+++ b/Co-ordinator_page/Index.html
@@ -29,7 +29,9 @@
 
     <nav class="nav">
         <div class="nav-menu flex-row">
-           
+            <div class="nav-brand">
+                <a href="#" class="text-gray">.</a>
+            </div>
             <div class="toggle-collapse">
                 <div class="toggle-icons">
                     <i class="fas fa-bars"></i>
@@ -51,7 +53,6 @@
                     <li class="nav-link">
                         <a href="../contact.html">Contact Us</a>
                     </li>
-
                 </ul>
             </div>
 
@@ -87,7 +88,6 @@
                             <div class="blog-title">
                                 <h3>Designing Crew</h3>
                                 <a href="./commitee/Designing.html"><button class="btn btn-blog">Explore</button></a>
-                                <span>2 minutes</span>
                             </div>
                         </div>
                         <div class="blog-content" data-aos="fade-in" data-aos-delay="200">
@@ -95,7 +95,6 @@
                             <div class="blog-title">
                                 <h3>Central Co-Ordinator</h3>
                                 <a href="./commitee/Co-ordinator.html"><button class="btn btn-blog">Explore</button></a>
-                                <span>2 minutes</span>
                             </div>
                         </div>
                         <div class="blog-content" data-aos="fade-left" data-aos-delay="200">
@@ -119,7 +118,6 @@
                             <div class="blog-title">
                                 <h3>Dicipline</h3>
                                 <a href="./commitee/Discipline.html"><button class="btn btn-blog">Explore</button></a>
-                                <span>2 minutes</span>
                             </div>
                         </div>
                         <div class="blog-content" data-aos="fade-right" data-aos-delay="200">
@@ -128,7 +126,6 @@
                                 <h3>Wall Magazine</h3>
                                 <a href="./commitee/Wall_magazine.html"><button
                                         class="btn btn-blog">Explore</button></a>
-                                <span>2 minutes</span>
                             </div>
                         </div>
                         <div class="blog-content" data-aos="fade-right" data-aos-delay="200">
@@ -136,7 +133,6 @@
                             <div class="blog-title">
                                 <h3>Science</h3>
                                 <a href="./commitee/Science.html"><button class="btn btn-blog">Explore</button></a>
-                                <span>2 minutes</span>
                             </div>
                         </div>
                         <div class="blog-content" data-aos="fade-right" data-aos-delay="200">
@@ -144,7 +140,6 @@
                             <div class="blog-title">
                                 <h3>Stage Prize and Certificate</h3>
                                 <a href="./commitee/Stage.html"><button class="btn btn-blog">Explore</button></a>
-                                <span>2 minutes</span>
                             </div>
                         </div>
                         <div class="blog-content" data-aos="fade-right" data-aos-delay="200">
@@ -152,7 +147,6 @@
                             <div class="blog-title">
                                 <h3>Management</h3>
                                 <a href="./commitee/Management.html"><button class="btn btn-blog">Explore</button></a>
-                                <span>2 minutes</span>
                             </div>
                         </div>
                         <div class="blog-content" data-aos="fade-right" data-aos-delay="200">
@@ -160,7 +154,6 @@
                             <div class="blog-title">
                                 <h3>Mass-Media</h3>
                                 <a href="./commitee/Mass_media.html"><button class="btn btn-blog">Explore</button></a>
-                                <span>2 minutes</span>
                             </div>
                         </div>
                     </div>
