--- a/Co-ordinator_page/Index.html
+++ b/Co-ordinator_page/Index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Coordinator</title>
+    <title>Coordinators</title>
 
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="./css/all.css">
@@ -42,6 +42,9 @@
                     </li>
                     <li class="nav-link">
                         <a href="../about.html">About</a>
+                    </li>
+                    <li class="nav-link">
+                        <a href="../event.html">Event</a>
                     </li>
 
                     <li class="nav-link">
