--- a/gallery.html
+++ b/gallery.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/slider.css">
-    <title>Gajajyoti2k22</title>
+    <title>Gallery</title>
 </head>
 
 <body>
@@ -28,7 +28,7 @@
                     <a href="./about.html" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Events</a>
+                    <a href="./event.html" class="nav-link">Events</a>
                 </li>
                 <li class="nav-item">
                     <a href="./Co-ordinator_page/Index.html" class="nav-link">Co-Ordinators</a>
