--- a/Co-ordinator_page/commitee/Co-ordinator.html
+++ b/Co-ordinator_page/commitee/Co-ordinator.html
@@ -214,9 +214,9 @@
 
           <div class="card">
             <div class="content">
-              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg" /></div>
+              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/Renukanta.jpg" /></div>
               <div class="contentBx">
-                <h3>Renukant Naik<br /><span>190704100004@cutm.ac.in</span></h3>
+                <h3>Renukant Nayak<br /><span>190704100004@cutm.ac.in</span></h3>
               </div>
             </div>
             <ul class="sci">
