--- a/Co-ordinator_page/commitee/Discipline.html
+++ b/Co-ordinator_page/commitee/Discipline.html
@@ -14,7 +14,7 @@
       <div class="container">
         <div class="card">
           <div class="content">
-            <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg" /></div>
+            <div class="imgBx"><img src="/Co-ordinator_page/assets/members/abhilash.jpeg" /></div>
             <div class="contentBx">
               <h3>Abhilash Mishra<br /><span>181516100016@cutm.ac.in</span></h3>
             </div>
@@ -34,7 +34,7 @@
         
         <div class="card">
             <div class="content">
-              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg"/></div>
+              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/Sarthak.jpg"/></div>
               <div class="contentBx">
                 <h3>Sarthak Das<br /><span>1815161000025@cutm.ac.in</span></h3>
               </div>
@@ -54,7 +54,7 @@
 
           <div class="card">
             <div class="content">
-              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg" /></div>
+              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/pritam.jpg" /></div>
               <div class="contentBx">
                 <h3>Pritam Kumar Nayak<br /><span>190301121115@cutm.ac.in</span></h3>
               </div>
@@ -114,7 +114,7 @@
 
           <div class="card">
             <div class="content">
-              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg" /></div>
+              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/pratyusha.jpg" /></div>
               <div class="contentBx">
                 <h3>Pratyusha Patra<br /><span>191516100046@cutm.ac.in</span></h3>
               </div>
@@ -154,7 +154,7 @@
 
           <div class="card">
             <div class="content">
-              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg" /></div>
+              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/aditiya.jpg" /></div>
               <div class="contentBx">
                 <h3>Aditya Kumar<br /><span>181516100026@cutm.ac.in</span></h3>
               </div>
