--- a/Co-ordinator_page/commitee/Management.html
+++ b/Co-ordinator_page/commitee/Management.html
@@ -34,7 +34,7 @@
         
         <div class="card">
             <div class="content">
-              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg"/></div>
+              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/sunanda.png"/></div>
               <div class="contentBx">
                 <h3>Sunanda Priyadarshani<br /><span>200402100026@cutm.ac.in</span></h3>
               </div>
@@ -74,7 +74,7 @@
 
           <div class="card">
             <div class="content">
-              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg" /></div>
+              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/sanjana.jpg" /></div>
               <div class="contentBx">
                 <h3>Sanjana Das<br /><span>190409120044@cutm.ac.in</span></h3>
               </div>
@@ -94,7 +94,7 @@
 
           <div class="card">
             <div class="content">
-              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg" /></div>
+              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/prajwalita.jpg" /></div>
               <div class="contentBx">
                 <h3>Prajwalita Behera<br /><span>190409120022@cutm.ac.in</span></h3>
               </div>
