--- a/Co-ordinator_page/commitee/Science.html
+++ b/Co-ordinator_page/commitee/Science.html
@@ -14,7 +14,7 @@
       <div class="container">
         <div class="card">
           <div class="content">
-            <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg" /></div>
+            <div class="imgBx"><img src="/Co-ordinator_page/assets/members/aswini.JPG" /></div>
             <div class="contentBx">
               <h3>Aswini Biswal<br /><span>200705110003@cutm.ac.in</span></h3>            
             </div>
@@ -34,7 +34,7 @@
         
         <div class="card">
             <div class="content">
-              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg"/></div>
+              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/binod.jpg"/></div>
               <div class="contentBx">
                 <h3>Binod Kumar Das<br /><span>200705110006@cutm.ac.in</span></h3>              
               </div>
@@ -94,7 +94,7 @@
 
           <div class="card">
             <div class="content">
-              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg" /></div>
+              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/abhijit.jpeg" /></div>
               <div class="contentBx">
                 <h3>Abhijit Mishra<br /><span>200704110002@cutm.ac.in</span></h3>
               </div>
@@ -114,7 +114,7 @@
 
           <div class="card">
             <div class="content">
-              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg" /></div>
+              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/samrat.jpeg" /></div>
               <div class="contentBx">
                 <h3>Samrat Soumyaranjan<br /><span>200705100004@cutm.ac.in</span></h3>
               </div>
