--- a/Co-ordinator_page/commitee/Anchoring.html
+++ b/Co-ordinator_page/commitee/Anchoring.html
@@ -14,7 +14,7 @@
       <div class="container">
         <div class="card">
           <div class="content">
-            <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg" /></div>
+            <div class="imgBx"><img src="/Co-ordinator_page/assets/members/sunanda.png" /></div>
             <div class="contentBx">
               <h3>Sunanda Priyadarshani<br/><span>200402100026@cutm.ac.in</span></h3>
             </div>
