--- a/Co-ordinator_page/commitee/cultural.html
+++ b/Co-ordinator_page/commitee/cultural.html
@@ -14,7 +14,7 @@
       <div class="container">
         <div class="card">
           <div class="content">
-            <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg" /></div>
+            <div class="imgBx"><img src="/Co-ordinator_page/assets/members/sunil.jpg" /></div>
             <div class="contentBx">
               <h3>Sunil Kumar Mishra<br /><span>200402160005@cutm.ac.in</span></h3>
             </div>
@@ -94,7 +94,7 @@
 
           <div class="card">
             <div class="content">
-              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg" /></div>
+              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/Renukanta.jpg" /></div>
               <div class="contentBx">
                 <h3>Renukanta Nayak<br /><span>190704100004@cutm.ac.in</span></h3>
               </div>
@@ -114,7 +114,7 @@
 
           <div class="card">
             <div class="content">
-              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/no_profile.jpg" /></div>
+              <div class="imgBx"><img src="/Co-ordinator_page/assets/members/abhilash.jpeg" /></div>
               <div class="contentBx">
                 <h3>Abhilash Mishra<br /><span>181516100016@cutm.ac.in</span></h3>
               </div>
