--- a/index.html
+++ b/index.html
@@ -115,9 +115,10 @@
         <img src="./images/Culturalevent.png" class="border-solid border-4 border-black" alt="">
         <img src="./images/managementevent.png" class="border-solid border-4 border-black" alt="">
         <img src="./images/science.png" class="border-solid border-4 border-black" alt="">
-        <img src="./images/techevent.png" class="border-solid border-4 border-black " alt="">
-        <img src="./images/entrepreneurship .png" class="border-solid border-4 border-black" alt="">
-        <img src="./images/libraryevent.png" class="border-solid border-4 border-black " alt="">
+        <img src="./images/csr.png" class="border-solid border-4 border-black" alt="">
+        <!-- <img src="./images/techevent.png" class="border-solid border-4 border-black " alt=""> -->
+        <!-- <img src="./images/entrepreneurship .png" class="border-solid border-4 border-black" alt=""> -->
+        <img src="./images/literaryevent.png" class="border-solid border-4 border-black " alt="">
       </div>
 
     </div>
